[tool.poetry]
name = "decisionengine"
version = "0.1.0"
description = ""
authors = ["Tung Nguyen <tungnt620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
pydot = "^3.0.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
